tests/codegen/fail/interface/struct/attr_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
 --> fail/interface/struct/attr_field_non_output_return_type.rs:8:1
  |
8 | #[graphql_interface]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
  |
  = help: the following other types implement trait `IsOutputType<S>`:
            <bool as IsOutputType<__S>>
            <i32 as IsOutputType<__S>>
            <f64 as IsOutputType<__S>>
            <ArcStr as IsOutputType<S>>
            <CharacterValueEnum as IsOutputType<__S>>
            <Box<T> as IsOutputType<S>>
            <juniper::meta::Field<S> as IsOutputType<S>>
            <Argument<S> as IsOutputType<S>>
          and $N others
